--- a/Convolution_Simulation_Demo.ipynb
+++ b/Convolution_Simulation_Demo.ipynb
@@ -1,33 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
-   "outputs": [],
    "source": [
     "# Demonstration of Convolution-based Simulation \n",
-    "# Contact: Michael Pyrcz, University of Texas at Austin, Geostatistics Course  (Twitter: @GeostatsGuy) \n",
+    "### Contact: Michael Pyrcz, University of Texas at Austin, Geostatistics Course  (Twitter: @GeostatsGuy) \n",
     "#\n",
-    "# Steps:\n",
-    "# 1. Make a kernel.  For this example we parameterize a simple 3 point symmetric kernel.  The default\n",
-    "#    is a triangular kernel with variable width.\n",
-    "# 2. Assign a random standard normal value to each model location (model is a 1D vector with 'nx' cells)\n",
-    "# 3. Convolve the random array from 2. with the kernel designed in 1.\n",
-    "# 4. Affine correction to standardize the convolution to have a mean of 0.0 and standard deviation of 1.0.\n",
-    "# 5. Calculate the vairogram of the standardized convolution to confirm the presence and form of spatial correlation.\n",
+    "## Steps:\n",
+    "#### 1. Make a kernel.  For this example we parameterize a simple 3 point symmetric kernel.  The default\n",
+    "####    is a triangular kernel with variable width.\n",
+    "#### 2. Assign a random standard normal value to each model location (model is a 1D vector with 'nx' cells)\n",
+    "#### 3. Convolve the random array from 2. with the kernel designed in 1.\n",
+    "#### 4. Affine correction to standardize the convolution to have a mean of 0.0 and standard deviation of 1.0.\n",
+    "#### 5. Calculate the vairogram of the standardized convolution to confirm the presence and form of spatial correlation.\n",
     "#\n",
-    "# Efron, 1982, The jackknife, the bootstrap, and other resampling plans, Society of Industrial and Applied Math, \n",
-    "# CBMS-NSF Monographs, 38."
+    "#### Efron, 1982, The jackknife, the bootstrap, and other resampling plans, Society of Industrial and Applied Math, \n",
+    "#### CBMS-NSF Monographs, 38."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -302,7 +306,10 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -323,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -337,9 +344,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
