LogPerm and Brittle, prod --> response feature

--- a/Experiential_DecisionTree.ipynb
+++ b/Experiential_DecisionTree.ipynb
@@ -730,8 +730,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
